--- a/setting.properties
+++ b/setting.properties
@@ -1,4 +1,6 @@
 #This is the properties for gitPic
-#Fri Dec 07 21:48:36 CST 2018
+#Fri Dec 07 21:50:37 CST 2018
+git_username=412171946@qq.com
 project_path=/Users/guoqw/myprojects/other/pages/hexo1/resource
+git_password=a66054577
 pic_path=/Users/guoqw/myprojects/other/pages/hexo1/resource/img
